# biotax

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs  settings.rs
src/adapters/repositories/: mod.rs
src/adapters/repositories/arango_db/: mod.rs  taxon_fetching.rs  taxon_registration.rs
src/adapters/repositories/kv_db/: taxon_fetching.rs  taxon_registration.rs
src/adapters/repositories/mem_db/: mod.rs  taxon_fetching.rs
src/assets/: names-tab-200.dmp
src/domain/dtos/: mod.rs  taxon.rs
src/domain/entities/: mod.rs  taxon_fetching.rs  taxon_registration.rs
src/domain/utils/: errors.rs
src/ports/api/: endpoints.rs  main.rs  mod.rs  modules.rs
src/ports/cli/: main.rs
src/use_cases/: build_composed_database.rs  build_filtered_database.rs  get_taxon_list_from_taxid.rs  load_source_dump_database.rs  mod.rs
