[package]
name = "biotax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at 
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
async-trait = "0.1.57"
csv = "1.1"
env_logger = "0.9.0"
futures = "0.3"
log = "0.4"
pickledb = "0.5.1"
polars = "0.23.2"
polars-core = "0.23.2"
polars-io = "0.23.2"
polars-lazy = "0.23.2"
polars-ops = "0.23.2"
quicli = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shaku = "0.6.1"
shaku_actix = "0.2.0"
structopt = "0.3.26"

[[bin]]
name = "biotax-api"
path = "src/ports/api/main.rs"

[[bin]]
name = "biotax-cli"
path = "src/ports/cli/main.rs"

[lib]
name = "biotax"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]
