[package]
name = "biotax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at 
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
actix-web = "4"
csv = "1.1"
env_logger = "0.9"
futures = "0.3"
log = "0.4"
polars = "0.23"
polars-core = "0.23"
polars-io = "0.23"
polars-lazy = "0.23"
polars-ops = "0.23"
quicli = "0.4"
reqwest = { version = "0.11", features = ["json"] }
rust_arango = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shaku = "0.6"
shaku_actix = "0.2"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "biotax-api"
path = "src/ports/api/main.rs"

[[bin]]
name = "biotax-cli"
path = "src/ports/cli/main.rs"

[lib]
name = "biotax"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]
